--- a/CSS/BoxBouquets.css
+++ b/CSS/BoxBouquets.css
@@ -866,14 +866,14 @@ transition: background-color 0.3s ease 0s;
         margin-bottom: 20px;
     }
     
-    .down__block-bouquet{
+    .down__block-bouquet, .three__block-bouquet{
         display: flex;
         height: 50%;
         gap: 20px;
         margin-bottom: 20px;
     }
 
-    .three__block-bouquet{
+    .four__block-bouquet{
         display: flex;
         height: 50%;
         gap: 20px;
@@ -919,14 +919,14 @@ transition: background-color 0.3s ease 0s;
         margin-bottom: 20px;
     }
     
-    .down__block-bouquet{
+    .down__block-bouquet, .three__block-bouquet{
         display: flex;
         height: 50%;
         gap: 20px;
         margin-bottom: 20px;
     }
 
-    .three__block-bouquet{
+    .four__block-bouquet{
         display: flex;
         height: 50%;
         gap: 20px;
